2014-06-16 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildMakefileRunTarget): Return 0
	if no makefile.
	(CygbuildCmdBuildStdMakefile): Adjust message.
	(CygbuildInstallFixEtcdirInstall): No action if etc/ is empty

	* bin/lib/cygbuild.pl: (GLOBAL::$systemName): Read NAME
	before DEBFULLNAME.

2014-06-15 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::Patch management commands):
	Document */tmp/* or /*.tmp/* directories in "patch" command.

	* bin/cygbuild.sh: (CygbuildPatchFileList): Disregard
	files in */tmp/* or /*.tmp/* directories
	(CygbuildPatchApplyQuiltMaybe): Improve checking of
	quilt status code.
	(CygbuildCmdInstallList): Warn about unknown variables.

2014-06-14 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallExtraBinFiles): Ignore
	*.tmp files. Do not remote extension. Add support for
	bin/FILE.cyginstdir install instructions for FILE. See
	HELP::OPTIONAL EXTERNAL DIRECTORIES::bin/ for more information.

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL DIRECTORIES):
	Document bin/ and patches/ directories.

2014-06-13 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildObjDumpLibraryDepList): Ignore MPR.dll.
	(CygbuildPreRemoveWrite): chmod 755.

2014-06-12 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES):
	Document delete.lst

2014-06-10 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: Update find option -perm +111 to newer
	  -perm /u+x,g+x,o+x search.

2014-04-16 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (BinPkgListing): Change to --xz option.

        * bin/cygbuild.sh:
        - Chnage default package extension from bz2 to xz.
        (CygbuildFileConvertToUnix): Skip .xz files.
        (CygbuildCommandMain): Chnage from bz2 to xz.
        (CygbuildDefineGlobalMain): New variable NAME_PKG_EXT=xz.
        (CygbuildCompressTarOpt): New.